# Auto-Ticket-Classification

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.json  Dockerfile  EVALUATION_SUMMARY.md  Makefile  README.md  deploy.sh  docker-compose.yaml  evaluate_model.py  pyproject.toml
artifacts/: model.onnx.dvc
configs/: config.yaml  data.yaml  export.yaml  infer.yaml  logging.yaml  preprocess.yaml  train.yaml
configs/model/: multitask_bert.yaml
data/processed/: train.parquet.dvc
data/raw/: tickets.csv.dvc
evaluation_results/: evaluation_report.txt
scripts/: mlflow_serve.py  self_check.sh
tests/: __init__.py  test_basic.py
ticket_triage_ml/: __init__.py  __main__.py  commands.py
ticket_triage_ml/api/: __init__.py  app.py  training.py
ticket_triage_ml/baseline/: __init__.py  model.py
ticket_triage_ml/data/: __init__.py  download.py  dvc_utils.py  io.py  preprocess.py  schema.py
ticket_triage_ml/production/: __init__.py  export_onnx.py  infer_onnx.py  mlflow_pyfunc.py  trt_export.sh
ticket_triage_ml/training/: __init__.py  datamodule.py  metrics.py  model.py  train.py
ticket_triage_ml/utils/: __init__.py  git.py  logging.py  paths.py  seeding.py
